--- a/src/app/styles/_base.scss
+++ b/src/app/styles/_base.scss
@@ -1,12 +1,66 @@
+@import "mixins";
+@import "bootstrap";
+
 body {
-  padding: 50px;
-  font: 20px/150% "Helvetica Neue", "Lucida Grande", Verdana, sans-serif;
-  color: #666;
-  background: #fcfcfc;
+  cursor: default;
+  overflow-y: scroll;
+  font-family: 'PT Sans', sans-serif;
 }
 
-input,
-textarea,
-button {
-  font: inherit;
+footer {
+  .navbar {
+    min-height: 25px;
+    max-height: 25px;
+    text-align: center;
+
+    .navbar-nav {
+      float: none;
+
+      &> li {
+        float: none;
+        display: inline-block;
+
+        > a {
+          padding: 0 10px;
+          line-height: 25px;
+          font-size: 11px;
+
+          .fa {
+            position: relative;
+            top: 1px;
+            margin-right: 3px;
+            font-size: 14px;
+            color: #999999;
+          }
+
+          &:hover {
+            color: #3399f3;
+
+            .fa {
+              color: #337bd5;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+h1, h2, h3, h4, h5, h5 {
+  &:first-of-type {
+    margin-top: 10px;
+  }
+}
+
+blockquote {
+  h1, h2, h3, h4, h5, h5 {
+    &:first-of-type {
+      margin-top: 0;
+    }
+  }
+}
+
+#container {
+  margin-top: 50px;
+  margin-bottom: 30px;
 }
